Fix unicode invisible font bold

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -6,6 +6,11 @@ body {
   height: 100%;
   color: #212529;
   overflow: hidden;
+
+  // override fonts from sb-admin template
+  font-family: "Nunito", "Hanuman", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 .text-hint {
@@ -48,7 +53,7 @@ body {
 
     .custom-col {
       width: 20%;
-      padding: .75rem;
+      padding: 0.75rem;
       border-right: 1px solid #e3e6f0;
     }
 
